# cppProjects

C_trainee/: CMakeLists.txt  main.c
C_trainee/src/: basic_algo.c  basic_algo.h  matrix.c  matrix.h
Codility/: FindSplitPoint.cpp  Rotation.cpp  binary_gap.cpp  countiDiv.cpp  distinctVal.cpp  frog.cpp  isPermutation.cpp  missing_cars.cpp
FactorySimulation/: CMakeLists.txt  main.cpp
FactorySimulation/include/: Factory.hpp  FactoryIO.hpp  IPackageDepot.hpp  IPackageQueue.hpp  IPackageReceiver.hpp  Package.hpp  PackageQueue.hpp  PackageSender.hpp  Ramp.hpp  Rand.hpp  ReceiverPreferences.hpp  Simulation.hpp  Storehouse.hpp  Types.hpp  Worker.hpp
FactorySimulation/src/: Factory.cpp  FactoryIO.cpp  Package.cpp  PackageQueue.cpp  PackageSender.cpp  Ramp.cpp  Rand.cpp  ReceiverPreferences.cpp  Simulation.cpp  Storehouse.cpp  Worker.cpp
FactorySimulation/test/: testFactory.cpp  testFactoryIO.cpp  testRamp.cpp  testSimulate.cpp  testStorehouse.cpp  test_varia.cpp
SlitGuide/: CMakeLists.txt  main.cpp
SlitGuide/include/: AstronomicFrame.hpp  Frame.hpp  uart.h
SlitGuide/src/: AstronomicFrame.cpp  AstronomicFrame.hpp  Frame.cpp  Frame.hpp  FrameData.hpp  SearchingMethods.cpp  SearchingMethods.hpp  Types.hpp  uart.c
SlitGuide/test/: AstronomicFram_test.cpp  AstronomicFram_test.hpp
catalogue/: CMakeLists.txt
catalogue/include/: Catalogue.hpp  Product.hpp
catalogue/src/: Catalogue.cpp  Product.cpp
nordic_semiconductor_test/: CMakeLists.txt  local_extremas.c  local_extremas.h  main.c  max_num_from_digits.c  max_num_from_digits.h  sorts_lib.c  sorts_lib.h
